--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,88 @@
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Environment
+.env
+.env.local
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Pytest
+.pytest_cache/
+
+# Migrations
+database/migrations/*.pyc
+
+# Outputs
+outputs/
+data/output/
+
+# Model cache
+.cache/
+.transformers_cache/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Docker
+*.dockerignore
+
+# Test coverage
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
+# Temporary files
+tmp/
+temp/
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+package-lock.json
