--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,41 @@
-# Core dependencies for running the visualization catalog
-pandas>=2.0
-matplotlib>=3.7
-seaborn>=0.13
-scikit-learn>=1.4
-scipy>=1.11
-plotly>=5.17.0
+# Core API framework
+fastapi==0.104.1
+uvicorn==0.24.0
+gunicorn==21.2.0
 
-# Tooling for local development and smoke tests
-pytest>=7.4
+# Database
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+alembic==1.12.1
+
+# ML and Data Processing
+transformers==4.35.2
+torch==2.1.1
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+
+# Web scraping and HTTP
+beautifulsoup4==4.12.2
+httpx==0.25.1
+
+# API utilities
+pydantic==2.5.0
+python-multipart==0.0.6
+jinja2==3.1.2
+python-dotenv==1.0.0
+
+# Background tasks
+redis==5.0.1
+celery==5.3.4
+flower==2.0.1
+kombu==5.3.4
+
+# Configuration
+pyyaml==6.0.1
+
+# Testing (standardized on respx)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+respx==0.20.2
+pytest-cov==4.1.0
