--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,23 @@ torch==2.1.1
 pandas==2.1.3
 numpy==1.24.3
 scikit-learn==1.3.2
+mlx>=0.15.0
+mlx-lm>=0.15.0
+scipy>=1.11.0
+
+# URL Analysis
+furl>=2.1.3
+tldextract>=5.1.0
+urllib3>=2.0.0
+
+# Rich Terminal UI
+rich>=13.7.0
+colorama>=0.4.6
+typer>=0.9.0
+
+# Visualization
+plotext>=5.2.8
+networkx>=3.0
 
 # Web scraping and HTTP
 beautifulsoup4==4.12.2
@@ -33,6 +50,10 @@ kombu==5.3.4
 
 # Configuration
 pyyaml==6.0.1
+
+# Data Quality & Validation
+pandera>=0.17.0
+jsonschema>=4.19.0
 
 # Testing (standardized on respx)
 pytest==7.4.3
