--- a/.gitignore
+++ b/.gitignore
@@ -1,88 +1,36 @@
-# Python
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
+*.pyc
 .venv/
 venv/
-ENV/
-env/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Environment
 .env
 .env.local
-
-# Database
 *.db
 *.sqlite
 *.sqlite3
-
-# Logs
 *.log
 logs/
-
-# OS
 .DS_Store
-Thumbs.db
-
-# Pytest
 .pytest_cache/
 
-# Migrations
-database/migrations/*.pyc
+# Old output locations (deprecated - use data/output instead)
+analysis/output/
+analysis/results/
+analysis/enhanced_results/
+analysis/cache/
 
-# Outputs
-outputs/
+# New organized output structure
 data/output/
+data/archive/
 
-# Model cache
+# Cache directories
 .cache/
 .transformers_cache/
 
-# Jupyter
-.ipynb_checkpoints/
+# Data files (keep input data if tracked, ignore generated data)
+*.jsonl
+!data/input/*.jsonl
 
-# Docker
-*.dockerignore
-
-# Test coverage
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
-*.cover
-
-# Temporary files
-tmp/
-temp/
-
-# Node.js
-node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json
+# Python pickle files (embeddings, models, etc.)
+*.pkl
+*.pickle
