--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ fastapi>=0.104.1
 uvicorn>=0.24.0
 gunicorn>=21.2.0
 
-# Database (updated for Python 3.13 compatibility)
+# Database
 psycopg2-binary>=2.9.10
 sqlalchemy>=2.0.23
 alembic>=1.12.1
 
-# ML and Data Processing
+# ML Data Processing
 transformers>=4.35.2
 torch>=2.6.0  # Updated for Python 3.13 compatibility
 pandas>=2.1.3
@@ -36,7 +36,7 @@ networkx>=3.0
 beautifulsoup4>=4.12.2
 httpx>=0.25.1
 
-# API utilities (updated for Python 3.13 compatibility)
+# API utilities
 pydantic>=2.10.0
 python-multipart>=0.0.6
 jinja2>=3.1.2
@@ -55,7 +55,7 @@ pyyaml>=6.0.1
 pandera>=0.17.0
 jsonschema>=4.19.0
 
-# Testing (standardized on respx)
+# Test
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
 respx>=0.20.2
