--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,22 @@ repos:
     hooks:
       - id: ruff
         args: ["--fix"]
-      - id: ruff-format
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        args: ["--profile=black"]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - types-PyYAML
+  - repo: local
+    hooks:
+      - id: forbid-emoji
+        name: forbid-emoji
+        entry: python scripts/check_no_emoji.py
+        language: system
+        stages: [commit]
+        files: "\\.py$"
