--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,12 @@ exclude = [
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
+[tool.isort]
+profile = "black"
+line_length = 100
+known_first_party = ["analysis", "config", "scripts", "tests"]
+skip = ["venv", ".venv", "__pycache__"]
+
 [tool.pytest.ini_options]
 minversion = "7.0"
 testpaths = ["tests"]
